fix wrapping and css & tutorial of deploying

--- a/src/client/components/modules/content/topics/view/topic.css
+++ b/src/client/components/modules/content/topics/view/topic.css
@@ -46,7 +46,6 @@
     display: block;
     margin-top: 10px;
     padding-right: 10px;
-    margin-bottom: 10px;
 }
 
 .topic-has-image {
@@ -63,8 +62,6 @@
 }
 
 .topic-text-wrap .body{
-    word-break: break-all;
-    white-space: pre-wrap;
     margin-bottom: 0;
     font-size: 14px;
     line-height: 20px;
